@@ -714,7 +714,7 @@ static int sqlite3_do_callback(struct php_sqlite3_fci *fc, zval *cb, int argc, s
 		if (Z_ISUNDEF(agg_context->zval_context)) {
 			ZVAL_NULL(&agg_context->zval_context);
 		}
-		ZVAL_COPY_VALUE(&zargs[0], &agg_context->zval_context);
+		ZVAL_DUP(&zargs[0], &agg_context->zval_context);
 		ZVAL_LONG(&zargs[1], agg_context->row_count);
 	}
 
@@ -748,6 +748,10 @@ static int sqlite3_do_callback(struct php_sqlite3_fci *fc, zval *cb, int argc, s
 
 	if ((ret = zend_call_function(&fc->fci, &fc->fcc)) == FAILURE) {
 		php_error_docref(NULL, E_WARNING, "An error occurred while invoking the callback");
+	}
+
+	if (is_agg) {
+		zval_ptr_dtor(&zargs[0]);
 	}
 
 	/* clean up the params */
